# chess-vlm

./: .cursorrules  .gitignore  README.md  jakob_notes.txt  main.py  mock_vllm_server.py  peft_to_full_model.py  prepare_data.py  pyproject.toml  qwen-grpo.py  qwen-test.py  qweneval.py  qwentest.py
configs/: basic.yaml  cot.yaml  detailed_cot.yaml  few_shot.yaml
data/: one-move.txt  prepare_data.py
data/Lichess/chess-puzzles-3000-full-moves/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/Lichess/chess-puzzles-600-full-moves-balanced/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/themed_prompts/: puzzles_arabianMate.json  puzzles_backRankMate.json  puzzles_bodenMate.json  puzzles_doubleCheck.json  puzzles_hangingPiece.json  puzzles_smotheredMate.json
notebooks/: exploration.ipynb  jakob_10_16.ipynb  pgn.ipynb
results/: puzzles.json  puzzles_anastasiaMate.json  puzzles_attackingF2F7.json  puzzles_discoveredAttack.json  puzzles_doubleBishopMate.json  puzzles_dovetailMate.json  results.json
results/aggregate/: accuracy_pivot_table.csv  aggregated_results.csv  first_move_accuracy_pivot_table.csv
results/anthropic/: claude-sonnet-4.5_('pgn',)_results.jsonl
results/gpt-5/: pgn_cot.json  pgn_cot_20251014_151453.json
results/sanity-check/: fen_basic_20251017_204900.json
scripts/: aggregate_results.py  evaluate.py  evaluate_anthropic.py  prepare_data.py  run_eval.py  simple_vllm_eval.sh  sweep.sh  sweep_anthropic.sh  sweep_board_formats.sh  themes.txt
src/: classes.py  logging_config.py  prompts.py  puzzle.py  puzzle_session.py  results_processor.py
(+58 files in other folders)
