[project]
name = "chess-vlm"
version = "0.1.0"
description = "A toy analysis of the visual reasoning priors of VLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chessboard-image>=1.1.3",
    "datasets>=4.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "python-chess>=1.999",
    "vllm>=0.11.0",
]
